--- a/app/index.html
+++ b/app/index.html
@@ -34,7 +34,7 @@
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular.min.js"></script>
 	<script src="https://cdnjs.cloudflare.com/ajax/libs/angular-ui-router/0.3.0/angular-ui-router.min.js"></script>
 	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/1.5.6/angular-animate.js"></script>
-		
+	<script src="https://ajax.googleapis.com/ajax/libs/angularjs/X.Y.Z/angular-cookies.js"></script>
 		
 	<!-- Theme JS -->
 	<script src="js/agency.js"></script>
@@ -46,6 +46,12 @@
 	<script src="app.js"></script>
 	<script src="main-page/main.controller.js"></script>
 	<script src="login/login.controller.js"></script>
+	<script src="register/register.controller.js"></script>
+
+	<!-- common directives and services -->
+	<script src="js/directives/header.directive.js"></script>
+    <script src="js/services/authentication.service.js"></script>
+	<script src="js/services/user.service.js"></script>
 		
     <!-- HTML5 Shim and Respond.js IE8 support of HTML5 elements and media queries -->
     <!-- WARNING: Respond.js doesn't work if you view the page via file:// -->
@@ -58,7 +64,11 @@
 
 <body ng-app="dispatch" id="page-top" class="index">
 
-
+	
+	<!-- Header View -->
+	<kavita></kavita>
+	
+	
 	<!-- MAIN CONTENT AND INJECTED VIEWS -->
 	<!-- angular templating -->
 	<!-- this is where content will be injected -->
@@ -70,6 +80,7 @@
     <!-- Bootstrap Core JavaScript -->
     <script src="js/bootstrap.min.js"></script>
 
+
     <!-- Plugin JavaScript -->
     <script src="http://cdnjs.cloudflare.com/ajax/libs/jquery-easing/1.3/jquery.easing.min.js"></script>
     <script src="js/classie.js"></script>
@@ -79,9 +90,11 @@
     <script src="js/jqBootstrapValidation.js"></script>
     <script src="js/contact_me.js"></script>
 
+
+
     <!-- Custom Theme JavaScript -->
     <script src="js/agency.js"></script>
-
+	
 </body>
 
 </html>
