--- a/app/login/login.html
+++ b/app/login/login.html
@@ -1,22 +1,33 @@
-
-<div ng-controller="loginController">
-	<h2>Login</h2>
-
-	<div id="status-buttons" class="text-center">
-		<a ui-sref-active="active" ui-sref=".profile"><span>1</span>Profile</a> 
-		<a ui-sref-active="active" ui-sref=".info"><span>2</span>Info</a> 
-		
-		<a ui-sref-active="active" ui-sref=".interests"><span>3</span>Interests</a>
-		<a ui-sref-active="active" ui-sref=".payment"><span>4</span>Payment</a>
+<!-- form.html -->
+<div ng-controller="loginController" class="row">
+	<div class="col-sm-8 col-sm-offset-2">
+	
+	    <div id="form-container">
+	
+	        <div class="page-header text-center">
+	            <h2>Login</h2>
+	            
+	            <!-- the links to our nested states using relative paths -->
+	            <!-- add the active class if the state matches our ui-sref -->
+	            <div id="status-buttons" class="text-center">
+	                <a ui-sref-active="active" ui-sref=".profile"><span>1</span> Profile</a>
+	                <a ui-sref-active="active" ui-sref=".info"><span>2</span> Interests</a>
+	                <a ui-sref-active="active" ui-sref=".payment"><span>3</span> Payment</a>
+	            </div>
+	        </div>
+	        
+	        <!-- use ng-submit to catch the form submission and use our Angular function -->
+	        <form id="signup-form" ng-submit="vm.processForm()">
+	
+	            <!-- our nested state views will be injected here -->
+	            <div id="form-views" ui-view></div>
+	        </form>
+	
+	    </div>
+	
+	    <!-- show our formData as it is being typed -->
+	    <pre>
+	        {{ vm.formData }}
+	    </pre>
 	</div>
-
-	<!-- use ng-submit to catch the form submission and use our Angular function -->
-	<form id="signup-form" ng-submit="processForm()">
-		<!-- our nested state views will be injected here -->
-		<div id="form-views" ui-view></div>
-	</form>
-
-	<pre>
-		{{formData}}
-	</pre>
 </div>
