--- a/app/login/profile.html
+++ b/app/login/profile.html
@@ -1,18 +1,20 @@
+
 <!-- form-profile.html -->
 <div class="form-group">
-    <label for="email">Email</label>
-    <input type="text" class="form-control" name="email" ng-model="formData.email">
+	<label for="email">Email</label> <input type="text" class="form-control" name="email" ng-model="formData.email">
 </div>
 
 <div class="form-group">
-    <label for="password">Password</label>
-    <input type="password" class="form-control" name="password" ng-model="formData.password">
+	<label for="password">Password</label> <input type="password" class="form-control" name="password" ng-model="formData.password">
 </div>
 
 <div class="form-group row">
 	<div class="col-xs-6 col-xs-offset-3">
-	    <a ui-sref="login.interests" class="btn btn-block btn-info"> CREATE AN ACCOUNT <span class="glyphicon glyphicon-circle-arrow-right"></span>
-	    </a>
+		<a ui-sref="login.interests" class="btn btn-block btn-info"> LOG ME IN 
+		<span class="glyphicon glyphicon-circle-arrow-right"></span>
+		</a>
 	</div>
 </div>
+
+<a ng-href="js/register/register.html">Don't have an account yet?</a>
 
