form changes for registration

--- a/app/main-page/main.html
+++ b/app/main-page/main.html
@@ -6,7 +6,7 @@
 			<div class="intro-text">
 				<div class="intro-heading">Smart Software Development On-Demand</div>
 				<div class="intro-lead-in">Assemble a top tech team to turn your ideas into reality</div>
-				<a ui-sref="login" class="page-scroll btn btn-xl">DISPATCH A PROJECT</a>
+				<a ui-sref="register" class="page-scroll btn btn-xl">DISPATCH A PROJECT</a>
 			</div>
 		</div>
 	</header>
